fix: drop MethodHandle usage so APKs can dex below API 26
ThreadHints and ThreadFactoryProvider live in jvmAndroidMain, the source
set shared with the Android target (minSdk 21). Both invoked a
MethodHandle, which compiles to the invoke-polymorphic dex opcode. D8
cannot desugar it, so every consuming APK was forced to minSdkVersion 26.

ThreadHints now probes for Thread.onSpinWait once via Class.getMethod and
caches a Runnable that either calls it directly or does nothing, keeping
the spin-wait path a plain virtual call. The direct reference sits in a
class body that is never loaded when the method is absent, so it cannot
trip ART's verifier below API 33.

ThreadFactoryProvider switches to plain Method.invoke reflection; it runs
once during init, so there is no hot-path cost.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0112HnTmtzQQdJh3TNZESGqa